[package]
name       ="entropy-test-cli"
description="Simple command line interface client for testing Entropy"
version    ='0.4.0-rc.1'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
entropy-client    ={ version="0.4.0-rc.1", path="../client" }
clap              ={ version="4.5.35", features=["derive"] }
colored           ="3.0.0"
subxt             ="0.38.0"
sp-core           ="34.0.0"
anyhow            ="1.0.97"
tokio             ={ version="1.44", features=["macros", "rt-multi-thread", "io-util", "process"] }
hex               ="0.4.3"
bincode           ="1.3.3"
x25519-dalek      ="2.0.1"
sp-runtime        ={ version="39.0.1", default-features=false }
entropy-shared    ={ version="0.4.0-rc.1", path="../shared" }
serde_json        ="1.0.140"
serde             ={ version="1.0.219", features=["derive"] }
reqwest           ="0.12.12"
parity-scale-codec={ version="3.7.2", default-features=false }
