[package]
name       ="entropy-testing-utils"
description="Utilities for testing the Entropy Threshold Signature Server"
version    ='0.3.0'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
subxt             ="0.35.3"
sp-keyring        ="34.0.0"
project-root      ="0.2.2"
sp-core           ={ version="31.0.0", default-features=false }
parity-scale-codec="3.6.12"
lazy_static       ="1.5.0"
hex-literal       ="0.4.1"
tokio             ={ version="1.41", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
axum              ={ version="0.7.9" }
entropy-shared    ={ version="0.3.0", path="../shared" }
entropy-kvdb      ={ version="0.3.0", path="../kvdb", default-features=false }
entropy-tss       ={ version="0.3.0", path="../threshold-signature-server", features=["test_helpers"] }
entropy-protocol  ={ version="0.3.0", path="../protocol" }
synedrion         ={ version="0.2.0-beta.0" }
hex               ="0.4.3"
rand_core         ="0.6.4"
rand              ="0.8.5"
tdx-quote         ={ version="0.0.1", features=["mock"] }

# Logging
tracing           ="0.1.37"
tracing-subscriber={ version="0.3.18", features=["env-filter"] }
