[package]
name       ="entropy-testing-utils"
description="Utilities for testing the Entropy Threshold Signature Server"
version    ='0.3.0'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
subxt             ="0.38.0"
sp-keyring        = "39.0.0"
project-root      ="0.2.2"
sp-core           = { version = "34.0.0", default-features = false }
parity-scale-codec="3.7.2"
lazy_static       ="1.5.0"
hex-literal       ="1.0.0"
tokio             ={ version="1.44", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
axum              ={ version="0.8.3" }
entropy-shared    ={ version="0.3.0", path="../shared" }
entropy-kvdb      ={ version="0.3.0", path="../kvdb", default-features=false }
entropy-tss       ={ version="0.3.0", path="../threshold-signature-server", features=["test_helpers"] }
entropy-protocol  ={ version="0.3.0", path="../protocol" }
synedrion         ="0.2.0"
hex               ="0.4.3"
rand_core         ="0.6.4"
rand              ="0.8.5"
tdx-quote         ={ version="0.0.3", features=["mock"] }

# Logging
tracing           ="0.1.41"
tracing-subscriber={ version="0.3.19", features=["env-filter"] }
