[package]
name       ="entropy-testing-utils"
description="Utilities for testing the Entropy Threshold Signature Server"
version    ='0.4.0-rc.1'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
subxt="0.35.3"
sp-keyring="34.0.0"
project-root="0.2.2"
sp-core={ version="31.0.0", default-features=false }
parity-scale-codec="3.7.2"
lazy_static="1.5.0"
hex-literal="1.0.0"
tokio={ version="1.44", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }
axum={ version="0.8.3" }
entropy-shared={ version="0.4.0-rc.1", path="../shared" }
entropy-kvdb={ version="0.4.0-rc.1", path="../kvdb", default-features=false }
entropy-tss={ version="0.4.0-rc.1", path="../threshold-signature-server", features=[
  "test_helpers",
] }
entropy-protocol={ version="0.4.0-rc.1", path="../protocol" }
hex="0.4.3"
rand_core="0.6.4"
rand="0.8.5"
tdx-quote={ version="0.0.3", features=["mock"] }
k256={ version="0.13", default-features=false, features=["ecdsa"] }
synedrion={ path="../../../synedrion", features=["k256", "dev"] }
manul={ git="https://github.com/entropyxyz/manul.git", rev="f2e444bf4ffed93c3408c0c4fa7a47bc83b844d0", features=[
  "tokio",
  "dev",
] }

# Logging
tracing           ="0.1.41"
tracing-subscriber={ version="0.3.19", features=["env-filter"] }
