[package]
name       ="entropy-tss"
version    ="0.1.0"
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
homepage   ='https://entropy.xyz/'
description='Entropy threshold signature scheme (TSS) server'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
# Common
serde              ={ version="1.0", default-features=false, features=["derive"] }
serde_json         ="1.0"
anyhow             ="1.0.81"
thiserror          ="1.0.55"
blake2             ="0.10.4"
x25519-dalek       ={ version="2.0.1", features=["static_secrets"] }
rand_core          ="0.6.4"
zeroize            ="1.5.7"
hex                ="*"
reqwest-eventsource="0.4"
serde_derive       ="1.0.147"
synedrion          ="0.1"
strum              ="0.25.0"

# Async
futures="0.3"
tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process", "sync"] }

# HTTP
reqwest    ={ version="0.11", features=["json", "stream"] }
axum       ={ version="0.6.18", features=["ws"] }
axum-macros="0.4.1"

# Substrate
subxt             ={ version="0.32.1" }
parity-scale-codec="3.6.9"
sp-core           ={ version="21.0.0", default-features=false }

# Entropy
entropy-shared  ={ path="../shared" }
entropy-kvdb    ={ path="../kvdb", default-features=false }
entropy-protocol={ path="../protocol", features=["server"] }

# Programs
entropy-programs-runtime={ git="https://github.com/entropyxyz/programs.git", tag="v0.8.0" }

# Logging
tracing                 ="0.1.37"
tracing-subscriber      ={ version="0.3.18", features=["env-filter", "json"] }
tracing-loki            ="0.2"
tower-http              ={ version="0.3.4", features=["trace", "cors"] }
tracing-bunyan-formatter="0.3.9"
uuid                    ={ version="1.8.0", features=["v4"] }

# Misc
tokio-tungstenite="0.19.0"
bip39            ={ version="2.0.0", features=["zeroize"] }
bincode          ="1.3.3"
bytes            ={ version="1.6", default-features=false, features=["serde"] }
base64           ="0.22.0"
clap             ={ version="4.0.29", features=["derive"] }
num              ="0.4.0"
async-stream     ="0.3.5"
snow             ="0.9.6"
sha3             ="0.10.8"
async-trait      ="0.1.76"
hostname         ="0.3"
sha1             ="0.10.6"
sha2             ="0.10.8"

[dev-dependencies]
entropy-testing-utils={ path="../testing-utils" }
serial_test          ="0.8.0"
hex-literal          ="0.3.4"
project-root         ="0.2.2"
sp-keyring           ="24.0.0"
more-asserts         ="0.3.1"
template-barebones   ={ git="https://github.com/entropyxyz/programs.git", tag="v0.7.0" }
lazy_static          ="1.4.0"
entropy-protocol     ={ path="../protocol", features=["unsafe"] }
blake3               ="1.5.1"
ethers-core          ="2.0.14"
schnorrkel           ={ version="0.9.1", default-features=false, features=["std"] }
schemars             ={ version="0.8.16" }

[build-dependencies]
vergen={ version="8.0.0", features=["build", "git", "gitcl"] }

[features]
default=['std']
std    =["sp-core/std"]
unsafe =[]
alice  =[]
bob    =[]
# Enable this feature to run the integration tests for the wasm API of entropy-protocol
# This requires the entropy-protocol node-js module to be built and so is not run by default
wasm_test=[]
