[package]
name   ="entropy-constraints"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0"

# parsing
serde           ="1.0.147"
serde_json      ="1.0"
serde_derive    ="1.0.147"
substrate-common={ path="../substrate-common", default-features=false }

# EVM
web3={ version="0.17.0", default-features=false }
