[package]
name   ="entropy-constraints"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0"

# parsing
serde         ="1.0.147"
serde_json    ="1.0"
serde_derive  ="1.0.147"
entropy-shared={ path="../shared", default-features=false }
sp-core       ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }

# EVM
web3={ version="0.17.0", default-features=false }

[features]
default=["std"]
std    =["serde/std", "serde_json/std", "entropy-shared/std", "sp-core/std"]
