[package]
name   ="entropy-constraints"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror="1.0"

# parsing

serde         ={ version="1.0.147", default-features=false, features=["derive"] }
serde_json    ={ version="1.0", default-features=false, features=["alloc"] }
entropy-shared={ path="../shared", default-features=false }
sp-core       ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31", default-features=false }

# EVM
ethers-core="0.13.0"
rlp        ="0.5.2"
hex        ="0.4.3"

[features]
default=["std"]
std    =["serde/std", "serde_json/std", "entropy-shared/std", "sp-core/std"]
