[package]
name = "etp-lindell17"
version = "0.1.0"
edition = "2021"

[dependencies]
#num-bigint = { version = "0.4", features = ["rand"] }
rand = { version = "0.8", default-features = false, optional = true } # , features = [ "std_rng"]}
k256 = { version = "0.9.6", default-features = false, features = ["ecdsa", "arithmetic"] }

[features]
std = [  ]
default = [ ]
party_one = ["rand"]


