[package]
name       ="entropy-protocol"
description="Entropy Signing and DKG protocol execution and transport logic"
version    ="0.0.1"
edition    ="2021"
license    ="AGPL-3.0-or-later"

[dependencies]
async-trait    ="0.1.73"
serde_json     ="1.0"
entropy-shared ={ path="../shared", default-features=false }
synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }
serde          ={ version="1.0", features=["derive"], default-features=false }
serde-big-array="0.5.1"
subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.29.0", default-features=false }
subxt-signer   ={ version="0.31.0", features=["sr25519"], default-features=false }
tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
x25519-dalek   ="2.0.0-pre.1"
futures        ="0.3"
hex            ="*"
blake2         ="0.10.4"
thiserror      ="1.0.40"
snow           ="0.9.2"
getrandom      ={ version="0.2", features=["js"] }
rand_core      ={ version="0.6.4", features=["getrandom"] }
tracing        ="0.1.37"

# Used only with the `server` feature to implement the WsConnection trait
axum             ={ version="0.6.18", features=["ws"], optional=true }
tokio-tungstenite={ version="0.19.0", optional=true }

# Used only with the `wasm` feature
gloo-net            ={ version="0.4.0", default-features=false, features=["websocket"], optional=true }
wasm-bindgen-futures={ version="0.4.37", optional=true }
wasm-bindgen        ={ version="0.2.87", optional=true }
wasm-bindgen-derive ={ version="0.2", optional=true }
js-sys              ={ version="0.3.64", optional=true }
web-sys             ={ version="0.3.64", features=["console"], optional=true }
base64              ={ version="0.13.0", optional=true }

[features]
server=["dep:axum", "dep:tokio-tungstenite", "entropy-shared/std", "subxt/substrate-compat"]
wasm=[
  "entropy-shared/wasm",
  "subxt-signer/web",
  "dep:gloo-net",
  "dep:wasm-bindgen-futures",
  "dep:wasm-bindgen",
  "dep:wasm-bindgen-derive",
  "dep:js-sys",
  "dep:web-sys",
  "dep:base64",
]

[lib]
crate-type=["cdylib", "rlib"]
