[package]
name       ='entropy-protocol'
version    ='0.1.0'
authors    =['Entropy Cryptography <engineering@entropy.xyz>']
description="Entropy Signing and DKG protocol execution and transport logic"
homepage   ='https://entropy.xyz/'
license    ='AGPL-3.0-or-later'
repository ='https://github.com/entropyxyz/entropy-core'
edition    ='2021'

[dependencies]
async-trait    ="0.1.73"
entropy-shared ={ path="../shared", default-features=false }
synedrion      ={ git="ssh://git@github.com/entropyxyz/synedrion.git", tag="v0.0.9" }
serde          ={ version="1.0", features=["derive"], default-features=false }
serde-big-array="0.5.1"
subxt          ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
subxt-signer   ={ version="0.31.0", features=[] }
tokio          ={ version="1.16", features=["sync", "rt", "macros"] }
x25519-dalek   ={ version="2.0.0", features=["static_secrets"] }
futures        ="0.3"
hex            ="*"
blake2         ="0.10.4"
thiserror      ="1.0.48"
snow           ="0.9.2"
getrandom      ={ version="0.2", features=["js"] }
rand_core      ={ version="0.6.4", features=["getrandom"] }
tracing        ="0.1.37"
bincode        ="1.3.3"

# Used only with the `server` feature to implement the WsConnection trait
axum             ={ version="0.6.18", features=["ws"], optional=true }
tokio-tungstenite={ version="0.19.0", optional=true }

[features]
default=["server"]
server=[
  "dep:axum",
  "dep:tokio-tungstenite",
  "entropy-shared/std",
  "subxt/substrate-compat",
  "subxt/native",
]
wasm=["entropy-shared/wasm", "subxt-signer/web"]
