[package]
name   ="server"
version="0.1.0"
edition="2021"

[dependencies]
# Common
serde              ={ version="1.0", default-features=false, features=["derive"] }
serde_json         ="1.0"
anyhow             ="1.0.53"
thiserror          ="1.0.31"
blake2             ="0.10.4"
x25519-dalek       ="2.0.0-pre.1"
chacha20poly1305   ="0.10.1"
rand_core          ="0.6.4"
generic-array      ="0.14.6"
zeroize            ="1.5.7"
hex                ="*"
reqwest-eventsource="0.4"
serde_derive       ="1.0.147"

# Async
futures="0.3"
tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }

# HTTP
rocket ={ version="0.5.0-rc.2", default-features=false, features=["json"] }
reqwest={ version="0.11", features=["json", "stream"] }

# Substrate
subxt             ={ package="subxt", git="https://github.com/entropyxyz/subxt.git", branch="polkadot-v0.9.31" }
parity-scale-codec="3.0.0"
sp-core           ={ package="sp-core", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31" }
tofn              ={ git="https://github.com/entropyxyz/tofn", branch="main" }
sp-keyring        ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31" }

# Entropy
entropy-shared={ path="../shared" }
kvdb          ={ path="../kvdb", default-features=false }

# Constraints
entropy-constraints={ path="../constraints" }
ethers-core        ="0.13.0"

# Logging
log               ="0.4.17"                                          # todo: remove, overlaps tracing
tracing           ="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }

# Misc
bip39  ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
bincode="1.3.3"
bytes  ={ version="1.0", default-features=false, features=["serde"] }
base64 ="0.13.0"
clap   ={ version="^4.1.8", features=["derive"] }

[dev-dependencies]
testing-utils={ path="../testing-utils" }
serial_test  ="0.8.0"
hex-literal  ="0.3.4"
project-root ="0.2.2"

[features]
default=['std']
std    =["sp-core/std"]
unsafe =[]
alice  =[]
bob    =[]
