[package]
name      ="server"
version   ="0.1.0"
authors   =['Entropy Cryptography <engineering@entropy.xyz>']
homepage  ='https://entropy.xyz/'
license   ='AGPL-3.0-or-later'
repository='https://github.com/entropyxyz/entropy-core'
edition   ='2021'

[dependencies]
# Common
serde              ={ version="1.0", default-features=false, features=["derive"] }
serde_json         ="1.0"
anyhow             ="1.0.53"
thiserror          ="1.0.47"
blake2             ="0.10.4"
x25519-dalek       ="2.0.0-pre.1"
chacha20poly1305   ="0.10.1"
rand_core          ="0.6.4"
generic-array      ="0.14.6"
zeroize            ="1.5.7"
hex                ="*"
reqwest-eventsource="0.4"
serde_derive       ="1.0.147"
synedrion          ={ git="ssh://git@github.com/entropyxyz/synedrion.git", branch="fix-32bit" }

# Async
futures="0.3"
tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util", "process"] }

# HTTP
reqwest    ={ version="0.11", features=["json", "stream"] }
axum       ={ version="0.6.18", features=["ws"] }
axum-macros="0.3.7"

# Substrate
subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1" }
parity-scale-codec="3.4.0"
sp-core           ={ version="21.0.0", default-features=false }

# Entropy
entropy-shared  ={ path="../shared" }
kvdb            ={ path="../kvdb", default-features=false }
entropy-protocol={ path="../protocol", features=["server"] }

# Constraints
ec-runtime={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.3.0" }

# Logging
tracing           ="0.1.37"
tracing-subscriber={ version="0.3.17", features=["env-filter", "json"] }
tower-http        ={ version="0.3.4", features=["trace", "cors"] }
uuid              ={ version="1.5.0", features=["v4"] }

# Misc
tokio-tungstenite="0.19.0"
bip39            ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
bincode          ="1.3.3"
bytes            ={ version="1.0", default-features=false, features=["serde"] }
base64           ="0.13.0"
clap             ={ version="4.0.29", features=["derive"] }
num              ="0.4.0"
async-stream     ="0.3.5"
snow             ="0.9.2"
sha3             ="0.10.8"
async-trait      ="0.1.73"
subxt-signer     ="0.31.0"

[dev-dependencies]
testing-utils     ={ path="../testing-utils" }
serial_test       ="0.8.0"
hex-literal       ="0.3.4"
project-root      ="0.2.2"
sp-keyring        ="24.0.0"
more-asserts      ="0.3.1"
template-barebones={ git="ssh://git@github.com/entropyxyz/constraints.git", tag="v0.2.0" }
lazy_static       ="1.4.0"

[build-dependencies]
vergen={ version="8.0.0", features=["build", "git", "gitcl", "rustc"] }

[features]
default=['std']
std    =["sp-core/std"]
unsafe =[]
alice  =[]
bob    =[]
