[package]
name      ="entropy-shared"
version   ="0.1.0"
authors   =['Entropy Cryptography <admin@entropy.xyz>']
homepage  ='https://entropy.xyz/'
license   ='AGPL-3.0-or-later'
repository='https://github.com/entropyxyz/entropy-core'
edition   ='2021'

[dependencies]
codec          ={ package="parity-scale-codec", version="3.0.0", default-features=false }
scale-info     ={ version='2.0.1', default-features=false, features=['derive'] }
serde          ={ version="1.0", default-features=false, features=["derive"] }
serde_derive   ="1.0.147"
sp-std         ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false }
frame-support  ={ package="frame-support", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0", default-features=false, optional=true }
node-primitives={ version="2.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0", optional=true }

[features]
default=["std"]
std=[
  "codec/std",
  "scale-info/std",
  "serde/std",
  "sp-std/std",
  "frame-support/std",
  "dep:node-primitives",
]
wasm=["codec/std", "scale-info/std", "serde/std", "sp-std/std"]
wasm-no-std=["frame-support", "dep:node-primitives"]
