[package]
name = "signing-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]}
reqwest = { version = "0.9", default-features = false }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
parity-scale-codec = "3.0.0"
common = { path = "../../crypto/common", default-features = false }
protocol = { path = "../protocol", default-features = false }
subxt = { git = "https://github.com/paritytech/subxt.git" }
multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
curv-kzen = { version = "0.9", default-features = false }
anyhow = "1.0.53"
futures = "0.3"
tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
serde = { version = "1.0", features = ["derive"] }
surf = "2"
sp-keyring = "6.0.0"
sp-core = "6.0.0"
envy = "0.4"
bip39 = { git = "https://github.com/infincia/bip39-rs.git", tag = "v0.6.0-beta.1"}
constraints = { path = "../constraints"}
tofnd = { git = "https://github.com/Entropyxyz/tofnd", branch = "main"}
project-root = "0.2.2"

[dev-dependencies]
testing-utils = { path = "../testing-utils"}
serial_test = "0.6.0"

[features]
default = ['std']
std = [
	"sp-core/std"
]
