[package]
name   ="signing-client"
version="0.1.0"
edition="2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common
serde     ={ version="1.0", features=["derive"] }
serde_json="1.0"
anyhow    ="1.0.53"
thiserror ="1.0.31"

# Async
futures="0.3"
tokio  ={ version="1.16", features=["macros", "fs", "rt-multi-thread", "io-util"] }

# HTTP
rocket ={ version="0.5.0-rc.1", default-features=false, features=["json"] }
reqwest={ version="0.11", features=["json", "stream"] }

# Substrate
parity-scale-codec="3.0.0"
# subxt             ={ git="https://github.com/paritytech/subxt.git" }
# sp-keyring        ="6.0.0"
# sp-core           ="6.0.0"
tofn={ git="https://github.com/Entropyxyz/tofn", branch="main" }

# Entropy
non-substrate-common={ path="../non-substrate-common", default-features=false }
kvdb                ={ path="../kvdb", default-features=false }
# constraints={ path="../constraints" }

# Logging
log               ="0.4.17"                                          # todo: remove, overlaps tracing
tracing           ="0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }

# Misc
uuid        ={ version="1.1.2", features=["serde", "v4"] }
tylift      ="0.3.5"
envy        ="0.4"
bip39       ={ git="https://github.com/infincia/bip39-rs.git", tag="v0.6.0-beta.1" }
project-root="0.2.2"
# local-ip    ="0.1"

[dev-dependencies]
testing-utils={ path="../testing-utils" }
serial_test  ="0.8.0"

# [features]
# default=['std']
# std    =["sp-core/std"]
