[package]
name   ="substrate-common"
version="0.1.0"
edition="2021"

[dependencies]
codec       ={ package="parity-scale-codec", version="3.0.0", default-features=false }
scale-info  ={ version='2.0.1', default-features=false, features=['derive'] }
serde       ={ version="1.0", features=["derive"] }
serde_json  ="1.0"
serde_derive="1.0.147"
sp-std      ={ package="sp-std", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
